--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,7 +19,7 @@ jobs:
         id: create-token
         uses: actions/create-github-app-token@30bf6253fa41bdc8d1501d202ad15287582246b4 # V2.0.3
         with:
-          app-id: ${{ var.GH_APP_ID }}  # GitHub App ID stored in secrets
+          app-id: ${{ vars.GH_APP_ID }}  # GitHub App ID stored in secrets
           private-key: ${{ secrets.PW_KEY }}  # GitHub App private key stored in secrets
           repositories: ${{ github.repository }}  # The repository for which you want to generate the token
 
